A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
A......... [ZBX-5656] fixed timeperiod validation (Eduard)
..F....... [ZBX-5660] fixed expression constructor exp labels style (Eduard)
..F....... [ZBX-3204] changed generating and reading algorithm for trigger expression condition functions, and fixed English translation (Oleg)
..F....... [ZBX-5677] fixed param field 3 manipulation in trigger popup (Eduard)
A......... [ZBX-5648] disallowed changing "templateid" in items, or creating new item with a predefined "templateid" (Oleg)
..F....... [ZBX-5644] fixed triggers with spaces in the expression missing from the graph legend (Oleg)
........S. [ZBX-5652] fixed resolving of a {ITEM.NAME} macro in notification messages (Sasha)
........S. [ZBX-5454] fixed encoding of long email subject line as required by RFC-2047; thanks to Jairo Eduardo Lopez Fuentes Nacarino (Andris)
A.F....... [ZBX-3920] added check for duplicate dependencies (Oleg)
..F....... [ZBX-5636] fixed empty acknowledge block in event details if event has no acknowledgments (Vedmak)
...G...... [ZBX-5571] fixed reporting of system.sw.packages for multiple package systems (Andris)
...G...... [ZBX-5559] fixed reporting of system.sw.packages with short package listing (Andris)
..F....... [ZBX-5280] fixed functional macros for newly created items returning 0 instead of 'no data' (Toms)
..F....... [ZBX-5280] fixed HOST.DNS macro priorities when only JMX and IPMI interfaces are used in host (Toms)
..F....... [ZBX-5280] fixed HOST.DNS macro not using default DNS from host interface configuration (Toms)
..F....... [ZBX-5280] added HOST.HOST macro support in map labels for trigger items (Toms)